syntax = "proto3";

package emane;

import "core/api/grpc/common.proto";

message GetEmaneModelConfigRequest {
    int32 session_id = 1;
    int32 node_id = 2;
    int32 iface_id = 3;
    string model = 4;
}

message GetEmaneModelConfigResponse {
    map<string, common.ConfigOption> config = 1;
}

message SetEmaneModelConfigRequest {
    int32 session_id = 1;
    EmaneModelConfig emane_model_config = 2;
}

message SetEmaneModelConfigResponse {
    bool result = 1;
}

message GetEmaneModelConfig {
    int32 node_id = 1;
    string model = 2;
    int32 iface_id = 3;
    map<string, common.ConfigOption> config = 4;
}

message NodeEmaneConfig {
    int32 iface_id = 1;
    string model = 2;
    map<string, common.ConfigOption> config = 3;
}

message GetEmaneEventChannelRequest {
    int32 session_id = 1;
    int32 nem_id = 2;
}

message GetEmaneEventChannelResponse {
    string group = 1;
    int32 port = 2;
    string device = 3;
}

message EmaneLinkRequest {
    int32 session_id = 1;
    int32 nem1 = 2;
    int32 nem2 = 3;
    bool linked = 4;
}

message EmaneLinkResponse {
    bool result = 1;
}

message EmaneModelConfig {
    int32 node_id = 1;
    int32 iface_id = 2;
    string model = 3;
    map<string, string> config = 4;
}

message EmanePathlossesRequest {
    int32 session_id = 1;
    int32 node1_id = 2;
    float rx1 = 3;
    int32 iface1_id = 4;
    int32 node2_id = 5;
    float rx2 = 6;
    int32 iface2_id = 7;
}

message EmanePathlossesResponse {
}

message LocationEvent {
    optional int32 nem_id = 1;
    int32 node_id = 2;
    int32 iface_id = 3;
    float lon = 4;
    float lat = 5;
    float alt = 6;
    optional float azimuth = 7;
    optional float elevation = 8;
    optional float magnitude = 9;
    optional float roll = 10;
    optional float pitch = 11;
    optional float yaw = 12;
}

message CommEffectEvent {
    optional int32 nem1_id = 1;
    int32 node1_id = 2;
    int32 iface1_id = 3;
    optional int32 nem2_id = 4;
    int32 node2_id = 5;
    int32 iface2_id = 6;
    int32 delay = 7;
    int32 jitter = 8;
    float loss = 9;
    int32 dup = 10;
    int32 unicast = 11;
    int32 broadcast = 12;
}

message PathlossEvent {
    optional int32 nem1_id = 1;
    int32 node1_id = 2;
    int32 iface1_id = 3;
    optional int32 nem2_id = 4;
    int32 node2_id = 5;
    int32 iface2_id = 6;
    optional float forward1 = 7;
    optional float reverse1 = 8;
    optional float forward2 = 9;
    optional float reverse2 = 10;
}

message AntennaProfileEvent {
    optional int32 nem_id = 1;
    int32 node_id = 2;
    int32 iface_id = 3;
    int32 profile = 4;
    float azimuth = 5;
    float elevation = 6;
}

message FadingSelectionEvent {
    optional int32 nem_id = 1;
    int32 node_id = 2;
    int32 iface_id = 3;
    string model = 4;
}

message EmaneEventsRequest {
    int32 session_id = 1;
    oneof event_type {
        LocationEvent location = 2;
        CommEffectEvent comm_effect = 3;
        PathlossEvent pathloss = 4;
        AntennaProfileEvent antenna = 5;
        FadingSelectionEvent fading = 6;
    }
}

message EmaneEventsResponse {
}
